# tmuxgotchi

./: Cargo.toml  LICENSE  README.md
docs/plans/: 2026-03-18-debug-creature-stability.md  2026-03-18-fancier-creatures-design.md  2026-03-18-fancier-creatures.md  2026-03-18-floating-tokens-design.md  2026-03-18-floating-tokens.md  2026-03-18-sprites-design.md  2026-03-18-sprites-implementation.md
src/: app.rs  debug.rs  jsonl.rs  main.rs  model.rs  session.rs  status_bar.rs  tmux.rs
src/sprites/: frames.rs  mod.rs
src/ui/: mod.rs  table.rs  tamagotchi.rs
