[package]
name = "tmuxgotchi"
version = "0.1.0"
edition = "2021"
description = "Tamagotchi-style TUI for managing pi agent sessions in tmux"
license = "MIT"
repository = "https://github.com/openclaw/tmuxgotchi"
keywords = ["tmux", "tui", "pi-agent", "tamagotchi", "session-manager"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Genar <genar@openclaw.dev>"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
regex = "1"
rand = "0.10.0"

[profile.release]
lto = true
strip = true
